<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.myfirstdemo.HomePage"
    android:background="@drawable/bckg2"
    android:id="@+id/homePage">

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/J"
        android:background="@drawable/round_button"
        android:id="@+id/fireButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="130dp"
        android:text="@string/G"
        android:background="@drawable/round_button"
        android:id="@+id/Camera_button"
        android:layout_alignTop="@+id/fireButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        />

    <Button
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/BREAK"
        android:background="@drawable/round_button"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/LEFT"
        android:textColor="#fff"
        android:id="@+id/leftTurn"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        />

    <Button
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/RIGHT"
        android:textColor="#fff"
        android:id="@+id/rightTurn"
        android:layout_alignTop="@+id/leftTurn"
        android:layout_alignRight="@+id/Camera_button"
        android:layout_alignEnd="@+id/Camera_button" />

    <Button
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/DOWN"
        android:textColor="#fff"
        android:id="@+id/reverse"
        android:layout_above="@+id/fireButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/UP"
        android:textColor="#fff"
        android:id="@+id/accelerator"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/K"
        android:background="@drawable/round_button"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/accelerator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
